--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /dist
 /node_modules
 /build
+test.html
 
 # Logs
 logs
@@ -10,6 +11,7 @@ npm-debug.log*
 pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
 lerna-debug.log*
 
 # OS
